User::login ->  Criar uma activity "login" no banco OK User::logout -> Criar uma activity "logout" no banco OK

--- a/app/webroot/css/custom.style.css
+++ b/app/webroot/css/custom.style.css
@@ -36,3 +36,10 @@ dd { margin-bottom: 20px;}
   font-weight: 700;
   padding-left: 10px;
 }
+
+
+@media (max-width: 1024px) {
+  .table-responsive-warning {
+    display: block !important;
+  }
+}
