--- a/app/webroot/css/custom.style.css
+++ b/app/webroot/css/custom.style.css
@@ -24,7 +24,7 @@ and open the template in the editor.
 
 dd { margin-bottom: 20px;}
 
-.message { font-size: 150%;}
+/*.message { font-size: 150%;}*/
 
 .boolean input[type=checkbox]{
   position: relative;
@@ -67,5 +67,43 @@ dd { margin-bottom: 20px;}
 
 #sidebar {
   top: 40px;
-  
+}
+
+.error-message {
+  text-transform: uppercase;
+  color: #d00;
+  font-weight: bold;
+
+  -webkit-animation-name: blinker;
+  -webkit-animation-duration: 1s;
+  -webkit-animation-timing-function: linear;
+  -webkit-animation-iteration-count: infinite;
+
+  -moz-animation-name: blinker;
+  -moz-animation-duration: 1s;
+  -moz-animation-timing-function: linear;
+  -moz-animation-iteration-count: infinite;
+
+  animation-name: blinker;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
+}
+
+@-moz-keyframes blinker {  
+  0% { opacity: 1.0; }
+50% { opacity: 0.0; }
+100% { opacity: 1.0; }
+}
+
+@-webkit-keyframes blinker {  
+  0% { opacity: 1.0; }
+50% { opacity: 0.0; }
+100% { opacity: 1.0; }
+}
+
+@keyframes blinker {  
+  0% { opacity: 1.0; }
+50% { opacity: 0.0; }
+100% { opacity: 1.0; }
 }
